Remove pack/unpack cache from linux jobs

--- a/.azure/linux-bench.yml
+++ b/.azure/linux-bench.yml
@@ -7,19 +7,22 @@ jobs:
     matrix:
       stack:
         STACK_YAML: "stack.yaml"
+  variables:
+      STACK_ROOT: $(Pipeline.Workspace)/.stack
   steps:
   - checkout: self
   - task: Cache@2
     inputs:
-      key: stack-cache-bench | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
-      path: .azure-cache
-      cacheHitVar: CACHE_RESTORED
-    displayName: "Cache stack artifacts"
-  - bash: |
-      mkdir -p ~/.stack
-      tar xzf .azure-cache/stack-root.tar.gz -C $HOME
-    displayName: "Unpack cache"
-    condition: eq(variables.CACHE_RESTORED, 'true')
+      key: stack-root-cache | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
+      path: $(STACK_ROOT)
+      cacheHitVar: STACK_ROOT_CACHE_RESTORED
+    displayName: "Cache stack root"
+  - task: Cache@2
+    inputs:
+      key: stack-work-cache | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
+      path: .stack-work
+      cacheHitVar: STACK_WORK_CACHE_RESTORED
+    displayName: "Cache stack work"
   - bash: |
       sudo add-apt-repository ppa:hvr/ghc
       sudo apt-get update
@@ -27,15 +30,12 @@ jobs:
       if ! which stack >/dev/null 2>&1; then
          curl -sSL https://get.haskellstack.org/ | sh
       fi
+      mkdir -p $STACK_ROOT
     displayName: 'Install Stack'
   - bash: stack setup --stack-yaml=$STACK_YAML
     displayName: 'stack setup'
   - bash: stack build --bench --only-dependencies --stack-yaml=$STACK_YAML
     displayName: 'stack build --bench --only-dependencies'
-  - bash: |
-      mkdir -p .azure-cache
-      tar czf .azure-cache/stack-root.tar.gz -C $HOME .stack
-    displayName: "Pack cache"
   - bash: |
       export PATH=/opt/cabal/bin:$PATH
       stack bench --ghc-options=-Werror  --stack-yaml=$STACK_YAML
