--- a/.azure/linux-stack.yml
+++ b/.azure/linux-stack.yml
@@ -15,19 +15,22 @@ jobs:
         STACK_YAML: "stack84.yaml"
       stack_ghc_lib_88:
         STACK_YAML: "stack-ghc-lib.yaml"
+  variables:
+      STACK_ROOT: $(Pipeline.Workspace)/.stack
   steps:
   - checkout: self
   - task: Cache@2
     inputs:
-      key: stack-cache-v2 | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
-      path: .azure-cache
-      cacheHitVar: CACHE_RESTORED
-    displayName: "Cache stack artifacts"
-  - bash: |
-      mkdir -p ~/.stack
-      tar xzf .azure-cache/stack-root.tar.gz -C $HOME
-    displayName: "Unpack cache"
-    condition: eq(variables.CACHE_RESTORED, 'true')
+      key: stack-root-cache | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
+      path: $(STACK_ROOT)
+      cacheHitVar: STACK_ROOT_CACHE_RESTORED
+    displayName: "Cache stack root"
+  - task: Cache@2
+    inputs:
+      key: stack-work-cache | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
+      path: .stack-work
+      cacheHitVar: STACK_WORK_CACHE_RESTORED
+    displayName: "Cache stack work"
   - bash: |
       ./fmt.sh
     displayName: "HLint via ./fmt.sh"
@@ -38,16 +41,12 @@ jobs:
       if ! which stack >/dev/null 2>&1; then
          curl -sSL https://get.haskellstack.org/ | sh
       fi
+      mkdir -p $STACK_ROOT
     displayName: 'Install Stack'
   - bash: stack setup --stack-yaml=$STACK_YAML
     displayName: 'stack setup'
   - bash: stack build --test --only-dependencies --stack-yaml=$STACK_YAML
     displayName: 'stack build --test --only-dependencies'
-  - bash: |
-      mkdir -p .azure-cache
-      tar czf .azure-cache/stack-root.tar.gz -C $HOME .stack
-    displayName: "Pack cache"
-    condition: eq(variables.CACHE_RESTORED, 'false')
   - bash: |
       export PATH=/opt/cabal/bin:$PATH
       stack test --ghc-options=-Werror  --stack-yaml=$STACK_YAML || stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML --ta "--rerun" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML --ta "--rerun"
