Enable tests in windows ci

--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -54,9 +54,8 @@ jobs:
     displayName: 'stack build --only-dependencies'
   - bash: |
       if [ "$STACK_YAML" = "stack8101.yaml" ]; then
-        stack test --no-run-tests --ghc-options="-Werror -fexternal-interpreter" --stack-yaml $STACK_YAML || stack test --no-run-tests --ghc-options="-Werror -fexternal-interpreter" --stack-yaml $STACK_YAML || stack test --no-run-tests --ghc-options="-Werror -fexternal-interpreter" --stack-yaml $STACK_YAML
+        stack test --ghc-options="-Werror -fexternal-interpreter" --stack-yaml $STACK_YAML
       else
-        stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML
+        stack test --ghc-options=-Werror --stack-yaml $STACK_YAML
       fi
     displayName: 'stack test --ghc-options=-Werror'
-    # TODO: run test suite when failing tests are fixed or marked as broken. See https://github.com/digital-asset/ghcide/issues/474
