Retry bench execution

--- a/.azure/linux-bench.yml
+++ b/.azure/linux-bench.yml
@@ -38,7 +38,8 @@ jobs:
     displayName: 'stack build --bench --only-dependencies'
   - bash: |
       export PATH=/opt/cabal/bin:$PATH
-      stack bench --ghc-options=-Werror  --stack-yaml=$STACK_YAML
+      # Retry to avoid fpcomplete servers timeouts
+      stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML || stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML  || stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML
     displayName: 'stack bench --ghc-options=-Werror'
   - bash: |
       cat bench-hist/results.csv
