--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -43,7 +43,8 @@ jobs:
       # Installing happy and alex standalone to avoid error "strip.exe: unable to rename ../*.exe; reason: File exists"
       stack install happy --stack-yaml $STACK_YAML
       stack install alex --stack-yaml $STACK_YAML
-      stack install cabal-install --stack-yaml $STACK_YAML
+      choco install -y cabal --version=$CABAL_VERSION
+      $(cygpath $ProgramData)/chocolatey/bin/RefreshEnv.cmd
       # GHC 8.10.1 fails with ghc segfaults, using -fexternal-interpreter seems to make it working
       # There are other transient errors like timeouts downloading from stackage so we retry 3 times
       if [ "$STACK_YAML" = "stack8101.yaml" ]; then
