--- a/bench/hist.yaml
+++ b/bench/hist.yaml
@@ -10,6 +10,15 @@ ghcideBench: ghcide-bench
 # Output folder for the experiments
 outputFolder: bench-hist
 
+# Example project used to run the experiments
+# Can either be a Hackage package (name,version)
+# or a local project (path) with a valid `hie.yaml` file
+example:
+    name: Cabal
+    version: 3.0.0.0
+    # path: path/to/example
+    module: Distribution/Simple.hs
+
 # The set of experiments to execute
 experiments:
     - hover
