Rename benchmark artifacts
bench/hist.yaml --> bench/config.yaml

bench-hist --> bench-results

--- a/.azure/linux-bench.yml
+++ b/.azure/linux-bench.yml
@@ -42,7 +42,7 @@ jobs:
       stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML || stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML  || stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML
     displayName: 'stack bench --ghc-options=-Werror'
   - bash: |
-      cat bench-hist/results.csv
+      cat bench-results/results.csv
     displayName: "cat results"
   - publish: bench-hist
     artifact: benchmarks
