WIP integrate haskell-lsp-1.0.0.0

--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,7 @@
 packages: .
+					~/hie-lsp/haskell-lsp
+					~/hie-lsp/haskell-lsp-types
+					~/hie-lsp/haskell-lsp/lsp-test
 
 test-show-details: direct
 
