--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -72,7 +72,8 @@ library
         transformers,
         unordered-containers >= 0.2.10.0,
         utf8-string,
-        hslogger
+        hslogger,
+        monad-control
     if flag(ghc-lib)
       build-depends:
         ghc-lib >= 8.8,
