--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -7,8 +7,8 @@ jobs:
     matrix:
       stack_810:
         STACK_YAML: "stack8101.yaml"
-      stack_88:
-        STACK_YAML: "stack88.yaml"
+#     stack_88:
+#       STACK_YAML: "stack88.yaml"
       stack_86:
         STACK_YAML: "stack.yaml"
       stack_ghc_lib_88:
