Run benchmarks on a list of examples
- Cabal 3.0.0.0
- haskell-lsp-types 0.22.0.0

--- a/bench/config.yaml
+++ b/bench/config.yaml
@@ -13,11 +13,17 @@ outputFolder: bench-results
 # Example project used to run the experiments
 # Can either be a Hackage package (name,version)
 # or a local project (path) with a valid `hie.yaml` file
-example:
-    name: Cabal
+examples:
+  # Medium-sized project without TH
+  - name: Cabal
     version: 3.0.0.0
-    # path: path/to/example
     module: Distribution/Simple.hs
+  # Small-sized project with TH
+  - name: haskell-lsp-types
+    version: 0.22.0.0
+    module: src/Language/Haskell/LSP/Types/Lens.hs
+# - path: path-to-example
+#   module: path-to-module
 
 # The set of experiments to execute
 experiments:
