Disable the 8.10 Windows tests, idem

--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -5,8 +5,8 @@ jobs:
     vmImage: 'windows-2019'
   strategy:
     matrix:
-      stack_810:
-        STACK_YAML: "stack8101.yaml"
+#     stack_810:
+#       STACK_YAML: "stack8101.yaml"
 #     stack_88:
 #       STACK_YAML: "stack88.yaml"
       stack_86:
