--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -54,5 +54,5 @@ jobs:
       fi
     displayName: 'stack build --only-dependencies'
   - bash: |
-      stack test --ghc-options=-Werror --stack-yaml $STACK_YAML --ta "--" || stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML --ta "--rerun" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML --ta "--rerun"
+      stack test --ghc-options=-Werror --stack-yaml $STACK_YAML --ta "--rerun" || stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML --ta "--rerun" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML --ta "--rerun"
     displayName: 'stack test --ghc-options=-Werror'
