--- a/.azure/linux-bench.yml
+++ b/.azure/linux-bench.yml
@@ -42,7 +42,7 @@ jobs:
       stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML || stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML  || stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML
     displayName: 'stack bench --ghc-options=-Werror'
   - bash: |
-      cat bench-results/results.csv
+      column -s, -t < bench-results/results.csv
     displayName: "cat results"
   - publish: bench-results
     artifact: benchmarks
