cleanup after iserv is killed instead of masking exceptions

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -49,6 +49,7 @@ library
         fuzzy,
         filepath,
         fingertree,
+        process,
         Glob,
         haddock-library >= 1.8,
         hashable,
