--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -52,8 +52,8 @@ library
         Glob,
         haddock-library >= 1.8,
         hashable,
-        haskell-lsp-types == 0.22.*,
-        haskell-lsp == 0.22.*,
+        lsp-types == 1.0.*,
+        lsp == 1.0.*,
         mtl,
         network-uri,
         prettyprinter-ansi-terminal,
@@ -279,8 +279,8 @@ executable ghcide
         filepath,
         gitrev,
         hashable,
-        haskell-lsp,
-        haskell-lsp-types,
+        lsp,
+        lsp-types,
         hie-bios,
         ghcide,
         lens,
@@ -335,8 +335,8 @@ test-suite ghcide-tests
         ghcide,
         ghc-typelits-knownnat,
         haddock-library,
-        haskell-lsp,
-        haskell-lsp-types,
+        lsp,
+        lsp-types,
         network-uri,
         lens,
         lsp-test >= 0.11.0.6 && < 0.12,
