--- a/hie-compat/hie-compat.cabal
+++ b/hie-compat/hie-compat.cabal
@@ -31,7 +31,7 @@ library
       ghc,
       ghc-boot
 
-  if (impl(ghc > 8.5) && impl(ghc < 8.7))
+  if (impl(ghc > 8.5) && impl(ghc < 8.7) && !flag(ghc-lib))
     hs-source-dirs: src-ghc86
     exposed-modules:
       Compat.HieAst
