--- a/hie-compat/hie-compat.cabal
+++ b/hie-compat/hie-compat.cabal
@@ -23,9 +23,16 @@ library
   default-language:    Haskell2010
   build-depends:
      base, array, bytestring, containers, directory, filepath, transformers
+
   if flag(ghc-lib)
     build-depends:
       ghc-lib
+    reexported-modules:
+      HieTypes as Compat.HieTypes,
+      HieDebug as Compat.HieDebug,
+      HieUtils as Compat.HieUtils,
+      HieAst   as Compat.HieAst,
+      HieBin   as Compat.HieBin
   else
     build-depends:
       ghc,
@@ -39,18 +46,18 @@ library
       Compat.HieTypes
       Compat.HieDebug
       Compat.HieUtils
-  if (impl(ghc > 8.7) && impl(ghc < 8.10))
+  if (impl(ghc > 8.7) && impl(ghc < 8.10) && !flag(ghc-lib))
     hs-source-dirs: src-ghc88
     exposed-modules:
       Compat.HieAst
       Compat.HieBin
-  if (impl(ghc > 8.9) && impl(ghc < 8.11))
+  if (impl(ghc > 8.9) && impl(ghc < 8.11) && !flag(ghc-lib))
     hs-source-dirs: src-ghc810
     exposed-modules:
       Compat.HieAst
       Compat.HieBin
 
-  if (impl(ghc > 8.7) && impl(ghc < 8.11))
+  if (impl(ghc > 8.7) && impl(ghc < 8.11) && !flag(ghc-lib))
     reexported-modules:
       HieTypes as Compat.HieTypes,
       HieDebug as Compat.HieDebug,
