--- a/hie-compat/hie-compat.cabal
+++ b/hie-compat/hie-compat.cabal
@@ -27,12 +27,6 @@ library
   if flag(ghc-lib)
     build-depends:
       ghc-lib
-    reexported-modules:
-      HieTypes as Compat.HieTypes,
-      HieDebug as Compat.HieDebug,
-      HieUtils as Compat.HieUtils,
-      HieAst   as Compat.HieAst,
-      HieBin   as Compat.HieBin
   else
     build-depends:
       ghc,
@@ -46,7 +40,7 @@ library
       Compat.HieTypes
       Compat.HieDebug
       Compat.HieUtils
-  if (impl(ghc > 8.7) && impl(ghc < 8.10) && !flag(ghc-lib))
+  if (impl(ghc > 8.7) && impl(ghc < 8.10))
     hs-source-dirs: src-ghc88
     exposed-modules:
       Compat.HieAst
@@ -57,7 +51,7 @@ library
       Compat.HieAst
       Compat.HieBin
 
-  if (impl(ghc > 8.7) && impl(ghc < 8.11) && !flag(ghc-lib))
+  if (impl(ghc > 8.7) && impl(ghc < 8.11))
     reexported-modules:
       HieTypes as Compat.HieTypes,
       HieDebug as Compat.HieDebug,
