--- a/hie-compat/hie-compat.cabal
+++ b/hie-compat/hie-compat.cabal
@@ -27,6 +27,14 @@ library
   if flag(ghc-lib)
     build-depends:
       ghc-lib
+    hs-source-dirs: src-ghc88
+    reexported-modules:
+      HieTypes as Compat.HieTypes,
+      HieDebug as Compat.HieDebug,
+      HieUtils as Compat.HieUtils
+    exposed-modules:
+      Compat.HieAst
+      Compat.HieBin
   else
     build-depends:
       ghc,
@@ -40,7 +48,7 @@ library
       Compat.HieTypes
       Compat.HieDebug
       Compat.HieUtils
-  if (impl(ghc > 8.7) && impl(ghc < 8.10))
+  if (impl(ghc > 8.7) && impl(ghc < 8.10) && !flag(ghc-lib))
     hs-source-dirs: src-ghc88
     exposed-modules:
       Compat.HieAst
@@ -51,7 +59,7 @@ library
       Compat.HieAst
       Compat.HieBin
 
-  if (impl(ghc > 8.7) && impl(ghc < 8.11))
+  if (impl(ghc > 8.7) && impl(ghc < 8.11) && !flag(ghc-lib))
     reexported-modules:
       HieTypes as Compat.HieTypes,
       HieDebug as Compat.HieDebug,
