--- a/hie-compat/hie-compat.cabal
+++ b/hie-compat/hie-compat.cabal
@@ -15,10 +15,19 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md README.md
 category:            Development
 
+flag ghc-lib
+  description: build against ghc-lib instead of the ghc package
+  default: False
+  manual: True
+
 library
   default-language:    Haskell2010
   build-depends:
-     base < 4.15, array, ghc, ghc-boot, bytestring, containers, directory, filepath, transformers
+     base < 4.15, array, bytestring, containers, directory, filepath, transformers
+  if flag(ghc-lib)
+    build-depends: ghc-lib
+  else
+    build-depends: ghc, ghc-boot
 
   exposed-modules:
     Compat.HieAst
@@ -27,9 +36,9 @@ library
     Compat.HieDebug
     Compat.HieUtils
 
-  if (impl(ghc > 8.5) && impl(ghc < 8.7))
+  if (impl(ghc > 8.5) && impl(ghc < 8.7) && !flag(ghc-lib))
     hs-source-dirs: src-ghc86
-  if (impl(ghc > 8.7) && impl(ghc < 8.10))
+  if ((impl(ghc > 8.7) && impl(ghc < 8.10)) || flag(ghc-lib))
     hs-source-dirs: src-ghc88 src-reexport
   if (impl(ghc > 8.9) && impl(ghc < 8.11))
     hs-source-dirs: src-ghc810 src-reexport
