PoC, works for 8.6, should work for 8.10

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -50,7 +50,8 @@ library
         filepath,
         fingertree,
         Glob,
-        haddock-library >= 1.8,
+        haddock-library >= 1.7,
+        haddock-api >= 2.22.0,
         hashable,
         haskell-lsp-types == 0.22.*,
         haskell-lsp == 0.22.*,
@@ -317,6 +318,7 @@ test-suite ghcide-tests
         ghcide,
         ghc-typelits-knownnat,
         haddock-library,
+        haddock-api,
         haskell-lsp,
         haskell-lsp-types,
         network-uri,
