--- a/stack.yaml
+++ b/stack.yaml
@@ -16,7 +16,12 @@ extra-deps:
 - regex-tdfa-1.3.1.0
 - shake-0.18.5
 - parser-combinators-1.2.1
-- haddock-library-1.8.0
+- haddock-library-1.7.0
+# haddock-api-2.22.0 doesn't compile. TODO: fix upstream, use package
+- github: haskell/haddock
+  commit: 1f704e30d5f40fa5113045b252c0e48aebd842be
+  subdirs:
+    - haddock-api
 - tasty-rerun-1.1.17
 - ghc-check-0.5.0.1
 - extra-1.7.2
