--- a/stack88.yaml
+++ b/stack88.yaml
@@ -11,6 +11,7 @@ extra-deps:
 - extra-1.7.2
 - implicit-hie-0.1.1.0
 - implicit-hie-cradle-0.2.0.1
+- haddock-api-2.23.1
 
 nix:
   packages: [zlib]
