--- a/stack-ghc-lib.yaml
+++ b/stack-ghc-lib.yaml
@@ -15,6 +15,7 @@ extra-deps:
 - regex-base-0.94.0.0
 - regex-tdfa-1.3.1.0
 - haddock-library-1.8.0
+- haddock-api-2.23.1
 - ghc-check-0.5.0.1
 - parser-combinators-1.2.1
 nix:
