--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -51,7 +51,6 @@ library
         fingertree,
         Glob,
         haddock-library >= 1.7,
-        haddock-api >= 2.22.0,
         hashable,
         haskell-lsp-types == 0.22.*,
         haskell-lsp == 0.22.*,
@@ -92,7 +91,8 @@ library
         cryptohash-sha1 >=0.11.100 && <0.12,
         hie-bios >= 0.7.1 && < 0.8.0,
         implicit-hie-cradle >= 0.2.0.1 && < 0.3,
-        base16-bytestring >=0.1.1 && <0.2
+        base16-bytestring >=0.1.1 && <0.2,
+        haddock-api >= 2.22.0
     if os(windows)
       build-depends:
         Win32
