Test the stack version in the benchmark CI script

--- a/.azure/linux-bench.yml
+++ b/.azure/linux-bench.yml
@@ -32,6 +32,8 @@ jobs:
       fi
       mkdir -p $STACK_ROOT
     displayName: 'Install Stack'
+  - bash: stack --version
+    displayName: 'stack version'
   - bash: stack setup --stack-yaml=$STACK_YAML
     displayName: 'stack setup'
   - bash: stack build --bench --only-dependencies --stack-yaml=$STACK_YAML
