--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -49,7 +49,7 @@ jobs:
       # Retry it three times to workaround compiler segfaults in windows
       run: cabal build || cabal build || cabal build
 
-    - name: Test
+    - name: Bench
       shell: bash
       # run the tests without parallelism, otherwise tasty will attempt to run
       # all test cases simultaneously which causes way too many hls
