--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -13,9 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with:
-        submodules: false
-    - run: git fetch origin master
+    - run: git fetch origin master # check the master branch for benchmarking
     - uses: actions/setup-haskell@v1.1.3
       with:
         ghc-version: ${{ matrix.ghc }}
