--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -26,7 +26,7 @@ jobs:
         cache-name: cache-cabal
       with:
         path: ~/.cabal/
-        key: ${{ runner.os }}-${{ matrix.ghc }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
+        key: ${{ runner.os }}-${{ matrix.ghc }}-build-${{ env.cache-name }}-${{ hashFiles('ghcide.cabal', 'cabal.project') }}
         restore-keys: |
           ${{ runner.os }}-${{ matrix.ghc }}-build-${{ env.cache-name }}-
           ${{ runner.os }}-${{ matrix.ghc }}-build-
@@ -59,4 +59,3 @@ jobs:
         name: bench-results
         path: |
            bench-results/results.*
- 
