--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -22,15 +22,11 @@ jobs:
 
     - name: Cache Cabal
       uses: actions/cache@v2
-      env:
-        cache-name: cache-cabal
       with:
-        path: ~/.cabal/
-        key: ${{ runner.os }}-${{ matrix.ghc }}-build-${{ env.cache-name }}-${{ hashFiles('ghcide.cabal', 'cabal.project') }}
-        restore-keys: |
-          ${{ runner.os }}-${{ matrix.ghc }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-${{ matrix.ghc }}-build-
-          ${{ runner.os }}-${{ matrix.ghc }}
+        path: |
+          ~/.cabal/packages
+          ~/.cabal/store
+        key: ${{ runner.os }}-${{ matrix.ghc }}-cabal-bench
 
     - run: cabal update
 
