Fix plugin tests for 'cabal test'

--- a/.azure/linux-stack.yml
+++ b/.azure/linux-stack.yml
@@ -43,6 +43,8 @@ jobs:
     displayName: 'Install Stack'
   - bash: stack setup --stack-yaml=$STACK_YAML
     displayName: 'stack setup'
+  - bash: cabal update # some tests use Cabal cradles
+    displayName: 'cabal update'
   - bash: stack build --test --only-dependencies --stack-yaml=$STACK_YAML
     displayName: 'stack build --test --only-dependencies'
   - bash: |
