Trim down matrix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,17 +9,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ['8.10.2', '8.10.1', '8.8.4', '8.8.3', '8.8.2', '8.6.5', '8.6.4']
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [macOS-latest, ubuntu-latest, windows-latest]
+        ghc: ['8.10.2', '8.8.4', '8.6.5']
         exclude:
           - os: windows-latest
             ghc: '8.10.2' # broken due to https://gitlab.haskell.org/ghc/ghc/-/issues/18550
           - os: windows-latest
             ghc: '8.8.4' # also fails due to segfault :(
+        include:
           - os: windows-latest
-            ghc: '8.8.3' # fails due to segfault
-          - os: windows-latest
-            ghc: '8.8.2' # fails due to error with Cabal
+            ghc: '8.10.1'
 
     steps:
     - uses: actions/checkout@v2
