--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           - os: windows-latest
             ghc: '8.10.1'
           - os: ubuntu-latest
-            ghc: '8.8.4'
+            ghc: '8.10.1'
             ghc-lib: true
 
     steps:
@@ -66,3 +66,4 @@ jobs:
       shell: bash
       # run the tests without parallelism to avoid running out of memory
       run: cabal test --test-options="-j1 --rerun-update" || cabal test --test-options="-j1 --rerun" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test --test-options="-j1 --rerun"
+      if: ${{ !matrix.ghc-lib}}
