--- a/hie-compat/hie-compat.cabal
+++ b/hie-compat/hie-compat.cabal
@@ -38,8 +38,8 @@ library
 
   if (impl(ghc > 8.5) && impl(ghc < 8.7) && !flag(ghc-lib))
     hs-source-dirs: src-ghc86
-  if ((impl(ghc > 8.7) && impl(ghc < 8.10)) || flag(ghc-lib))
+  if (impl(ghc > 8.7) && impl(ghc < 8.10)) 
     hs-source-dirs: src-ghc88 src-reexport
-  if (impl(ghc > 8.9) && impl(ghc < 8.11))
+  if (impl(ghc > 8.9) && impl(ghc < 8.11) || flag(ghc-lib))
     hs-source-dirs: src-ghc810 src-reexport
 
