--- a/.azure/linux-stack.yml
+++ b/.azure/linux-stack.yml
@@ -35,10 +35,5 @@ jobs:
     displayName: 'stack setup'
   - bash: cabal update # some tests use Cabal cradles
     displayName: 'cabal update'
-  - bash: stack build --test --only-dependencies
-    displayName: 'stack build --test --only-dependencies'
-  - bash: |
-      export PATH=/opt/cabal/bin:$PATH
-      stack test --ghc-options=-Werror  --ta "--rerun-update" || stack test --ghc-options=-Werror --ta "--rerun" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true stack test --ghc-options=-Werror --ta "--rerun"
-    # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
-    displayName: 'stack test --ghc-options=-Werror'
+  - bash: stack build --test --no-run-tests
+    displayName: 'stack build --test --no-run-tests'
