--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -37,8 +37,5 @@ jobs:
       $(cygpath $ProgramData)/chocolatey/bin/RefreshEnv.cmd
       # GHC 8.10.1 fails with ghc segfaults, using -fexternal-interpreter seems to make it working
       # There are other transient errors like timeouts downloading from stackage so we retry 3 times
-        stack build --only-dependencies --stack-yaml stack-windows.yaml --ghc-options="-fexternal-interpreter" || stack build --only-dependencies --stack-yaml stack-windows.yaml --ghc-options="-fexternal-interpreter" || stack build --only-dependencies --stack-yaml stack-windows.yaml  --ghc-options="-fexternal-interpreter"
-    displayName: 'stack build --only-dependencies'
-  - bash: |
-      stack test --ghc-options=-Werror --stack-yaml stack-windows.yaml --ta "--rerun-update" || stack test --ghc-options=-Werror --stack-yaml=stack-windows.yaml --ta "--rerun" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true stack test --ghc-options=-Werror --stack-yaml=stack-windows.yaml --ta "--rerun"
-    displayName: 'stack test --ghc-options=-Werror'
+        stack build --test --no-run-tests --stack-yaml stack-windows.yaml --ghc-options="-fexternal-interpreter" || stack build --test --no-run-tests --stack-yaml stack-windows.yaml --ghc-options="-fexternal-interpreter" || stack build --test --no-run-tests --stack-yaml stack-windows.yaml  --ghc-options="-fexternal-interpreter"
+    displayName: 'stack build --test'
