Allow insecure commands temporary

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,8 @@ jobs:
   test:
     timeout-minutes: 360
     runs-on: ${{ matrix.os }}
-
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
     strategy:
       fail-fast: false
       matrix:
