--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -75,7 +75,7 @@ library
         utf8-string,
         hslogger,
         opentelemetry >=0.6.1,
-        heapsize ==0.1
+        heapsize ==0.2.*
     if flag(ghc-lib)
       build-depends:
         ghc-lib >= 8.8,
