Allocate less, group keys, clean up hlints

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -57,6 +57,7 @@ library
         hie-compat,
         mtl,
         network-uri,
+        parallel,
         prettyprinter-ansi-terminal,
         prettyprinter-ansi-terminal,
         prettyprinter,
