--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -137,6 +137,7 @@ library
         Development.IDE.Core.RuleTypes
         Development.IDE.Core.Service
         Development.IDE.Core.Shake
+        Development.IDE.Core.Tracing
         Development.IDE.GHC.Compat
         Development.IDE.GHC.Error
         Development.IDE.GHC.Orphans
@@ -178,7 +179,6 @@ library
     other-modules:
         Development.IDE.Core.Compile
         Development.IDE.Core.FileExists
-        Development.IDE.Core.Tracing
         Development.IDE.GHC.CPP
         Development.IDE.GHC.Warnings
         Development.IDE.Import.FindImports
@@ -268,6 +268,7 @@ executable ghcide
         hashable,
         haskell-lsp,
         haskell-lsp-types,
+        heapsize,
         hie-bios,
         ghcide,
         lens,
