Drop the -fexternal-interpreter flag in the Windows stack build

--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -35,7 +35,5 @@ jobs:
       stack install alex --stack-yaml stack-windows.yaml
       choco install -y cabal --version=$CABAL_VERSION
       $(cygpath $ProgramData)/chocolatey/bin/RefreshEnv.cmd
-      # GHC 8.10.1 fails with ghc segfaults, using -fexternal-interpreter seems to make it working
-      # There are other transient errors like timeouts downloading from stackage so we retry 3 times
-        stack build --test --no-run-tests --stack-yaml stack-windows.yaml --ghc-options="-fexternal-interpreter" || stack build --test --no-run-tests --stack-yaml stack-windows.yaml --ghc-options="-fexternal-interpreter" || stack build --test --no-run-tests --stack-yaml stack-windows.yaml  --ghc-options="-fexternal-interpreter"
+        stack build --test --no-run-tests --stack-yaml stack-windows.yaml  || stack build --test --no-run-tests --stack-yaml stack-windows.yaml  || stack build --test --no-run-tests --stack-yaml stack-windows.yaml
     displayName: 'stack build --test'
