--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [macOS-latest, ubuntu-latest, windows-latest]
-        ghc: ['8.10.2', '8.8.4', '8.6.5']
+        ghc: ['8.10.2', '8.10.1', '8.8.4', '8.8.3', '8.8.2', '8.6.5', '8.6.4']
+        test: [false]
         ghc-lib: [false]
         exclude:
           - os: windows-latest
@@ -17,11 +18,17 @@ jobs:
           - os: windows-latest
             ghc: '8.8.4' # also fails due to segfault :(
         include:
-          - os: windows-latest
-            ghc: '8.10.1'
+          # one ghc-lib build
           - os: ubuntu-latest
             ghc: '8.10.1'
             ghc-lib: true
+          # run the testsuite only once per ghc major version
+          - ghc: '8.10.2'
+            test: true
+          - ghc: '8.8.4'
+            test: true
+          - ghc: '8.6.5'
+            test: true
 
     steps:
     - uses: actions/checkout@v2
@@ -65,4 +72,4 @@ jobs:
       shell: bash
       # run the tests without parallelism to avoid running out of memory
       run: cabal test --test-options="-j1 --rerun-update" || cabal test --test-options="-j1 --rerun" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test --test-options="-j1 --rerun"
-      if: ${{ !matrix.ghc-lib}}
+      if: ${{ !matrix.ghc-lib}} && {{matrix.test}}
