Fix include blocks

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,13 +24,13 @@ jobs:
             ghc-lib: true
           # run the testsuite only once per ghc major version
           - os: [macOS-latest, ubuntu-latest, windows-latest]
-          - ghc: '8.10.2'
+            ghc: '8.10.2'
             test: true
           - os: [macOS-latest, ubuntu-latest, windows-latest]
-          - ghc: '8.8.4'
+            ghc: '8.8.4'
             test: true
           - os: [macOS-latest, ubuntu-latest, windows-latest]
-          - ghc: '8.6.5'
+            ghc: '8.6.5'
             test: true
 
     steps:
