Add a TestRequest to wait for arbitrary ide actions
Closes #955

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -41,6 +41,7 @@ library
         base == 4.*,
         binary,
         bytestring,
+        case-insensitive,
         containers,
         data-default,
         deepseq,
